--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae reprehenderit amet, deserunt repellendus nemo libero rem autem dolores exercitationem culpa voluptatibus saepe sunt ducimus ea eaque harum ut! Eos, ut.</p>
       </div>
       <div class="article-title-section article-section">
-        <h2 class="article-title">About Me</h2>
+        <h1 class="article-title">About Me</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
@@ -52,7 +52,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem harum libero quidem pariatur ut accusamus aliquid dolore, iste voluptatum itaque earum quis. Facilis dolore provident magni impedit excepturi, in beatae.</p>
       </div>
       <div class="article-title-section article-section">
-        <h2 class="article-title">My Interests</h2>
+        <h1 class="article-title">My Interests</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
@@ -66,10 +66,10 @@
     <article data-index="2" data-status="inactive">
       <div class="article-image-section article-section"></div>
       <div class="article-description-section article-section">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita dicta obcaecati, magni illum minima unde deserunt earum numquam sequi? Consequatur voluptate pariatur quo sit impedit, dolor voluptatum ipsa quidem?</p>
+        <p>I was only four years old when my father taught me how to play chess. My growth remained slow and my strength was stagnant until I finally got into my school varsity team at ten years old. Although I was steadily getting better, I hit a skill ceiling. It all changed when I became fourteen. I kept pushing the limits, constantly playing more games, and reading more books. I finally broke the 2000 elo barrier online on lichess last November 2, 2022. Yet, my journey doesn't end here. I'm currently working on my FIDE rating and title, and I plan to be a much more active chess player once I move to the USCF.</p>
       </div>
       <div class="article-title-section article-section">
-        <h2 class="article-title">Short Autobio</h2>
+        <h1 class="article-title">My Journey</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
