Added functionality to the navigation bar

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </a>
     </div>
     <div id="nav-link-section" class="nav-section">
-      <a href="#">ABOUT</a>
-      <a href="#">INTERESTS</a>
-      <a href="#">AUTOBIO</a>
+      <a href="#" onclick="handleNavClick(0)">ABOUT</a>
+      <a href="#" onclick="handleNavClick(1)">INTERESTS</a>
+      <a href="#" onclick="handleNavClick(2)">AUTOBIO</a>
     </div>
     <div id="nav-social-section" class="nav-section">
       <a href="#">
