Updated the content of all pages

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </a>
     </div>
     <div id="nav-link-section" class="nav-section">
-      <a href="#" onclick="handleNavClick(0)">ABOUT</a>
-      <a href="#" onclick="handleNavClick(1)">INTERESTS</a>
-      <a href="#" onclick="handleNavClick(2)">AUTOBIO</a>
+      <a href="#" onclick="handleNavClick(0)">BEGINNINGS</a>
+      <a href="#" onclick="handleNavClick(1)">JOURNEY</a>
+      <a href="#" onclick="handleNavClick(2)">FUTURE</a>
     </div>
     <div id="nav-social-section" class="nav-section">
       <a href="#">
@@ -32,10 +32,20 @@
     <article data-index="0" data-status="active">
       <div class="article-image-section article-section"></div>
       <div class="article-description-section article-section">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae reprehenderit amet, deserunt repellendus nemo libero rem autem dolores exercitationem culpa voluptatibus saepe sunt ducimus ea eaque harum ut! Eos, ut.</p>
+        <p>
+          Hello, I'm Gian Alingog, and <strong>this</strong> is my story.
+          <br />
+          <br />
+          <br />
+          My father observed that my mental capabilities had potential, since I was able to show excellence in mathematics at a very young age - being able to multiply and divide while my classmates were still learning how to count. Aside from that, I exhibited competence in logical reasoning and problem solving as well; evident when I was doing 3rd and 4th grade mathematical word problems at the age of six.
+          <br />
+          <br />
+          <br />
+          At the age of twelve, I started teaching myself the basic of programming, starting out with Mobile App Development with Kotlin.
+        </p>
       </div>
       <div class="article-title-section article-section">
-        <h1 class="article-title">About Me</h1>
+        <h1 class="article-title">My Beginnings</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
@@ -49,10 +59,18 @@
     <article data-index="1" data-status="inactive">
       <div class="article-image-section article-section"></div>
       <div class="article-description-section article-section">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem harum libero quidem pariatur ut accusamus aliquid dolore, iste voluptatum itaque earum quis. Facilis dolore provident magni impedit excepturi, in beatae.</p>
+        <p>
+          I was only four years old when my father taught me how to play chess. My growth remained slow and my strength was
+          stagnant until I finally got into my school varsity team at ten years old. Although I was steadily getting better, I hit
+          a skill ceiling. It all changed when I became fourteen. I kept pushing the limits, constantly playing more games, and
+          reading more books. I finally broke the 2000 elo barrier online on lichess last November 2, 2022.
+          <br />
+          <br />
+          On the other hand, when it came to programming, I did a lot of switching as I couldn't decide what I wanted to do with this newly-found talent. After Kotlin, I learned the following (in order): Java, C++, C#, Ruby, Python, and Javascript - not settling between Competitive Programming, Mobile, Desktop, Web, or Game Development. Currently, I'm sticking to web development.
+        </p>
       </div>
       <div class="article-title-section article-section">
-        <h1 class="article-title">My Interests</h1>
+        <h1 class="article-title">My Journey</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
@@ -66,10 +84,16 @@
     <article data-index="2" data-status="inactive">
       <div class="article-image-section article-section"></div>
       <div class="article-description-section article-section">
-        <p>I was only four years old when my father taught me how to play chess. My growth remained slow and my strength was stagnant until I finally got into my school varsity team at ten years old. Although I was steadily getting better, I hit a skill ceiling. It all changed when I became fourteen. I kept pushing the limits, constantly playing more games, and reading more books. I finally broke the 2000 elo barrier online on lichess last November 2, 2022. Yet, my journey doesn't end here. I'm currently working on my FIDE rating and title, and I plan to be a much more active chess player once I move to the USCF.</p>
+        <p>
+          Yet, my journey doesn't end here. This summer, I plan to join more tournaments - about once per week - to improve my over-the-board and overall skill. I'm currently working on my FIDE rating and title, and I plan to be a much more active chess player once I move to the USCF.
+          <br />
+          <br />
+          <br />
+          Although I'm currently focusing on improving my web development skills, I might consider taking Mobile Development as well. I also won't cast aside Game Development as a side hobby because I have some ideas that I haven't implemented.
+        </p>
       </div>
       <div class="article-title-section article-section">
-        <h1 class="article-title">My Journey</h1>
+        <h1 class="article-title">My Future</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
