Added more social links

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
       <a href="#" onclick="handleNavClick(2)">FUTURE</a>
     </div>
     <div id="nav-social-section" class="nav-section">
-      <a href="#">
+      <a href="https://github.com/GianAlingog">
         <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://chessarena.com/profile/683457">
+        <i class="fa-regular fa-chess-king"></i>
+      </a>
+      <a href="https://lichess.org/@/GianAlingog">
+        <img src="lichess-transparent.png" alt="lichess">
       </a>
     </div>
   </nav>
