Added an achievements tab

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="#" onclick="handleNavClick(0)">BEGINNINGS</a>
       <a href="#" onclick="handleNavClick(1)">JOURNEY</a>
       <a href="#" onclick="handleNavClick(2)">FUTURE</a>
+      <a href="#" onclick="handleNavClick(3)">ACHIEVEMENTS</a>
     </div>
     <div id="nav-social-section" class="nav-section">
       <a href="https://github.com/GianAlingog">
@@ -100,6 +101,100 @@
       </div>
       <div class="article-title-section article-section">
         <h1 class="article-title">My Future</h1>
+      </div>
+      <div class="article-nav-section article-section">
+        <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
+          <i class="fa-regular fa-chess-knight"></i>
+        </button>
+        <button class="article-nav-right-button" type="button" onclick="handleRightClick()">
+          <i class="fa-regular fa-chess-knight"></i>
+        </button>
+      </div>
+    </article>
+    <article data-index="3" data-status="inactive">
+      <div class="article-image-section article-section">
+        <p>
+          Academic Achievements:
+          <ul>
+            <li>1st Honor Academic Award (Grades 1-6)</li>
+            <li>Chess Varsity (Grade 5-Present)</li>
+            <li>Magis Award for Academic Excellence (Grade 7)</li>
+            <li>Table Tennis Varsity (Grade 7)</li>
+            <li>Achieving a final mark of A in all subjects (Grade 7-9)</li>
+            <li>Cluster Secretary General (Grade 10)</li>
+          </ul>
+        </p>
+        <p>
+          Positions:
+          <ol>
+            <li>Grade 6: President</li>
+            <li>Grade 7: Officer, Fair Committee Member</li>
+            <li>Grade 8: Officer, SIPA Finance Head</li>
+            <li>Grade 9: Class President, AthC Finance Committee, Chess Org Head</li>
+          </ol>
+        </p>
+      </div>
+      <div id="article-1" class="article-description-section article-section">
+        <p>
+          Extracurriculars:
+          <ul>
+            <li>Table Tennis</li>
+            <li>Chess</li>
+            <li>Fencing</li>
+            <li>Mathematics</li>
+            <li>Computer Science and Programming</li>
+            <li>Violin</li>
+            <li>Floorball</li>
+            <li>Golf</li>
+          </ul>
+        </p>
+      </div>
+      <div id="article-2" class="article-description-section article-section">
+        <p>
+          Extracurricular Awards:
+
+          Trophies:
+          2nd:
+          <ol>
+            <li>1st Saint Anthony Development Chess Cup Elementary Team Division</li>
+            <li>1st Saint Judenites Scholastic Rapid Chess Tournament Elementary Team Division</li>
+          </ol>
+
+          Medals:
+          1st:
+          <ol>
+            <li>PAYA Chess Tournament SY 2017-2018 Midgets Team Division</li>
+            <li>MILO 2017 Chess Little Olympics</li>
+            <li>MILO 2018 Chess Little Olympics</li>
+            <li>PAYA Chess Tournament SY 2018-2019 Midgets Division Board 3</li>
+            <li>Inter School Table Tennis Midgets Team Division SY 2019-2020</li>
+            <li>PAYA Chess Tournament SY 2022-2023 Juniors Division Board 4</li>
+          </ol>
+          2nd:
+          <ol>
+            <li>PAYA Chess Tournament SY 2017-2018 Midgets Team Division</li>
+            <li>PAYA Chess Tournament SY 2017-2018 Midgets Division Board 4</li>
+            <li>1st Saint Anthony Development Chess Cup Elementary Team Division</li>
+            <li>1st Saint Anthony Development Chess Cup Elementary Division Board 2</li>
+            <li>1st Saint Judenites Scholastic Rapid Chess Tournament Elementary Team Division</li>
+            <li>1st Saint Judenites Scholastic Rapid Chess Tournament Elementary Division Board 4</li>
+            <li>PAYA Chess Tournament SY 2018-2019 Midgets Team Division</li>
+            <li>PAYA Chess Tournament SY 2022-2023 Juniors Team Division</li>
+          </ol>
+          3rd:
+          <ol>
+            <li>4th Ichthus Cup Elementary Boys Division</li>
+            <li>PRADA Chess Tournament SY 2017-2018 Midgets Team Division</li>
+            <li>PRADA Chess Tournament SY 2017-2018 Midgets Division Board 4</li>
+          </ol>
+          4th-5th:
+          <ol>
+            <li>Bluewave Marquinton Chess Tournament U13</li>
+          </ol>
+        </p>
+      </div>
+      <div class="article-title-section article-section">
+        <h1 class="article-title">My Achievements</h1>
       </div>
       <div class="article-nav-section article-section">
         <button class="article-nav-left-button" type="button" onclick="handleLeftClick()">
